# hangman_guesser

./: .pre-commit-config.yaml  Makefile  README.md  entrypoint.sh  hangman_api_user_v9.ipynb  pylama.ini  pyproject.toml  pytest.ini  pytype.cfg
.common-config/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  deinit.sh  entrypoint.sh  init.sh  pylama.ini  pytest.ini  pytype.cfg
src/hangman_guesser/env/: TFenv.py
src/hangman_guesser/masked_model/: learningClass.py  qqn_masked.ipynb
src/hangman_guesser/masked_model/env/: TFenv_masked.py
src/hangman_guesser/model/: model copy 2.ipynb  model copy 3.ipynb  model copy.ipynb  model.ipynb  model.py  model_ddqn.ipynb  model_masked.ipynb  myMetrics.py  rrnq.ipynb  test.py
src/hangman_guesser/model/env/: TFenv.py  TFenv_masked copy.py  TFenv_masked.py
src/hangman_guesser/model/train/: events.out.tfevents.1620999902.LAPTOP-QCUO7IUG.6304.4.v2
src/hangman_guesser/qtable_strategy/: data.json  test.ipynb
