[tool.poetry]
name = "hangman-guesser"
version = "0.1.0"
description = "tf env."
authors = ["Hugo Vanthournhout <hugovth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.19.2"
matplotlib = "3.4.1"
seaborn = "0.11.1"
tf_agents = "0.7.1"
tf-nightly-gpu = "2.6.0.dev20210512"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
black = "^19.10b0"
pylama = "^7.7.1"
mypy = "^0.782"
coverage = "^5.1"
pre-commit = "^2.5.1"
ipykernel = "5.4.3"
debugpy = "^1.2.1"
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
